syntax = "proto3";

option objc_class_prefix = "IMS";
option go_package = ".";

package ims;

// The InstanceMetaService is responsible for serving and renewing certificates
// This defines the RPC protocoll between the command line tool and the service.
service InstanceMetaService {
  rpc Status(Void) returns (StatusReply) {}
  rpc Stop(Void) returns (StopReply) {}
  rpc AssumeRole(AssumeRoleRequest) returns (StatusReply) {}
  rpc RetrieveRole(AssumeRoleRequest) returns (StatusReply) {}
  rpc Config(Void) returns (ConfigReply) {}
}

message Void {}

message StatusReply {
  string Error = 1;

  string Role = 2;
  string AccessKeyId = 3;
  string SecretAccessKey = 4;
  string SessionToken = 5;
  string Expiration = 6;
  string Region = 7;
}

message StopReply {
  string Error = 1;
}

message AssumeRoleRequest {
  string Name = 1;
  string Mfa = 2;
}

message Profile {
  string AwsAccessKeyID = 1;
	string AwsSecretAccessKey = 2;
	string AwsSessionToken = 3;
	string Region = 4;
	string MFASerial = 5;
	string RoleARN = 6;
  string SourceProfile = 7;
	string RoleSessionName = 8;
}

message ConfigReply {
  map<string, Profile> profiles = 1;
}
